# cmsfix2

./: README.rst  install.sh  pyproject.toml
etc/inst-scripts/: inst-stage-2.sh
src/cmsfix2/: __init__.py
src/cmsfix2/cli/: commands.py
src/cmsfix2/config/: filestorage.py
src/cmsfix2/db/: handler.py  initdb.py
src/cmsfix2/db/fixtures/: seed.py
src/cmsfix2/db/models/: node.py
src/cmsfix2/lib/: app.py  roles.py
src/cmsfix2/views/: __init__.py  node.py
src/cmsfix2/views/subviews/: node.py
